Add totel holders

--- a/src/telegram/templates/HourlyInfo.mustache
+++ b/src/telegram/templates/HourlyInfo.mustache
@@ -1,6 +1,8 @@
 Hourly <i>{{symbol}}</i> info ℹ️
 
 <b>Price</b>: {{coingeckoInfo.usdPrice}} <i>USD️</i>
+<b>Total holders</b>: {{ethplorerData.holdersCount}}
+<b>Total transfers</b>: {{ethplorerData.transfersCount}}
 
 <b>1 hour info</b>:
     <b>Bought</b> for the last hour on UniSwap: {{uniswapInfo.uniswapHourlyInfo.buyVolume}} <i>{{symbol}}️️</i>
