--- a/src/telegram/templates/HourlyInfo.mustache
+++ b/src/telegram/templates/HourlyInfo.mustache
@@ -1,30 +1,17 @@
-Hourly <i>{{symbol}}</i> info ℹ️
-
 <b>Price</b>: {{coingeckoInfo.usdPrice}} <i>USD️</i>
 <b>Total holders</b>: {{ethplorerData.holdersCount}}
 <b>Total transfers</b>: {{ethplorerData.transfersCount}}
-
 <b>1 hour info</b>:
-    <b>Bought</b> for the last hour on UniSwap: {{uniswapInfo.uniswapHourlyInfo.buyVolume}} <i>{{symbol}}️️</i>
-    <b>Sold</b> for the last hour on UniSwap: {{uniswapInfo.uniswapHourlyInfo.sellVolume}} <i>{{symbol}}️️</i>
-    <b>Trading volume</b>: {{uniswapInfo.uniswapHourlyInfo.amountUSD}} <i>USD️</i>
-
+  <b>bought</b>/<b>sold</b>: {{uniswapInfo.uniswapHourlyInfo.buyVolume}} / {{uniswapInfo.uniswapHourlyInfo.sellVolume}} <i>{{symbol}}️️</i>
+  Trading <b>volume</b>: {{uniswapInfo.uniswapHourlyInfo.amountUSD}} <i>USD️</i>
 <b>24 hours info</b>:
-    <b>Bought</b> for the last hour on UniSwap: {{uniswapInfo.uniswap24hInfo.buyVolume}} <i>{{symbol}}️️</i>
-    <b>Sold</b> for the last hour on UniSwap: {{uniswapInfo.uniswap24hInfo.sellVolume}} <i>{{symbol}}️️</i>
-    <b>Trading volume</b>: {{uniswapInfo.uniswap24hInfo.amountUSD}} <i>USD️</i>
-
+  <b>Bought</b>/<b>sold</b>: {{uniswapInfo.uniswap24hInfo.buyVolume}} / {{uniswapInfo.uniswap24hInfo.sellVolume}} <i>{{symbol}}️️</i>
+  Trading <b>volume</b>: {{uniswapInfo.uniswap24hInfo.amountUSD}} <i>USD️</i>
 <b>Pool data</b>:
 {{#uniswapPairData}}
-    <i>{{token0Symbol}}/{{token1Symbol}}</i>
-
-        <b>Pooled {{token0Symbol}}</b>: {{pooledToken0}}
-        <b>Pooled {{token1Symbol}}</b>: {{pooledToken1}}
-
-        1 hour <b>trading volume</b>: {{lastHourData.volumeUSD}} <i>USD️</i>
-        24 hours <b>trading volume</b>: {{last24hData.volumeUSD}} <i>USD️</i>
-
-        <b>Total TXs</b>: {{totalTxns}}
-        <b>TXs for the last hour</b>: {{lastHourData.txns}}
-        <b>TXs for the last 24h</b>: {{last24hData.txns}}
+  <i>{{token0Symbol}}/{{token1Symbol}}</i>
+    <b>Pooled</b> {{token0Symbol}} / {{token1Symbol}}: {{pooledToken0}} / {{pooledToken1}}
+    1h/24h trading <b>volume</b>: {{lastHourData.volumeUSD}} / {{last24hData.volumeUSD}} <i>USD️</i>
+    Total <b>TXs</b>: {{totalTxns}}
+    <b>TXs</b> for the last 1h/24h: {{lastHourData.txns}} / {{last24hData.txns}}
 {{/uniswapPairData}}
