Reduce pancakeswap info

--- a/src/telegram/templates/HourlyInfo.mustache
+++ b/src/telegram/templates/HourlyInfo.mustache
@@ -17,17 +17,21 @@
     <b>TXs</b> for the last 1h/24h: {{lastHourData.txns}} / {{last24hData.txns}}
 {{/uniswapPairData}}
 <b>PancakeSwap</b>
+{{^pancakeswapInfo.briefly}}
 <b>1 hour info</b>:
 <b>bought</b>/<b>sold</b>: {{pancakeswapInfo.hourlyInfo.buyVolume}} / {{pancakeswapInfo.hourlyInfo.sellVolume}} <i>{{symbol}}️️</i>
 Trading <b>volume</b>: {{pancakeswapInfo.hourlyInfo.amountUSD}} <i>USD️</i>
 <b>24 hours info</b>:
 <b>Bought</b>/<b>sold</b>: {{pancakeswapInfo.info24h.buyVolume}} / {{pancakeswapInfo.info24h.sellVolume}} <i>{{symbol}}️️</i>
 Trading <b>volume</b>: {{pancakeswapInfo.info24h.amountUSD}} <i>USD️</i>
+{{/pancakeswapInfo.briefly}}
 <b>Pool data</b>:
 {{#pancakeswapPairData}}
     <i>{{token0Symbol}}/{{token1Symbol}}</i>
     <b>Pooled</b> {{token0Symbol}} / {{token1Symbol}}: {{pooledToken0}} / {{pooledToken1}}
+    {{^pancakeswapInfo.briefly}}
     1h/24h trading <b>volume</b>: {{lastHourData.volumeUSD}} / {{last24hData.volumeUSD}} <i>USD️</i>
     Total <b>TXs</b>: {{totalTxns}}
     <b>TXs</b> for the last 1h/24h: {{lastHourData.txns}} / {{last24hData.txns}}
+    {{/pancakeswapInfo.briefly}}
 {{/pancakeswapPairData}}
